--- a/src/Topxia/WebBundle/Resources/translations/messages.en_US.yml
+++ b/src/Topxia/WebBundle/Resources/translations/messages.en_US.yml
@@ -426,8 +426,8 @@
 'MP4文件的视频编码格式，请使用AVC(H264)编码，否则浏览器无法播放。': 'MP4 video should be transcoded using AVC(H264) encoder, or the video cannot played in the browser.'
 网站服务器: 'Website server'
 '，如需使用%Edusoho%云视频,点击': ', click to use %Edusoho% cloud video service'
-这里: Here
-'了解详情。': 'Learn more'
+这里: ' Here '
+'了解详情。': ' to learn more.'
 '视频转码类型': 'Video transcoding type'
 设置: Setting
 '支持常见文档、图片、音视频、压缩包文件格式。': 'Support for common documents, pictures, audio and video, compressed file format.'
@@ -487,7 +487,7 @@ flash课程: 'Courses in flash video format'
 '内容': Content
 '您有一段自动保存内容，继续编辑请点击': 'You have a unfinished content which has been saved automatiacally ,click EDIT to coutinue'
 'PPT课时需要开通EduSoho云文档服务才能使用,': 'To use the PPT feature, please activate Cloud Document Service powered by EduSoho'
-点击: Click
+点击: ' Click'
 '文档课时需要开通EduSoho云文档服务才能使用,': 'To use the document feature, please activate Cloud Document Service powered by EduSoho'
 'Flash课时需要开通EduSoho云视频服务才能使用,': 'To use the flash content feature, please activate Cloud Document Service powered by EduSoho'
 视频时长或: 'Video length or '
@@ -530,12 +530,12 @@ flash课程: 'Courses in flash video format'
 '格式的视频文件上传，文件大小不能超过<strong>2 GB</strong>。': 'The size of the uploading video can not exceed <strong>2 GB</strong>'
 '断点续传': 'Multithreading breakpoint transmissionM'
 '（仅支持HTML5浏览器）。': '(Only supports HTML5 browser)'
-云视频服务器: 'cloud-video server'
+云视频服务器: 'Cloud Video Server'
 '，上传之后会对视频进行格式转换，转换过程需要一定的时间，在这个过程中视频将无法播放。': 'The video will be transcoded which takes some time and the video is not accessible during the proccess.'
 '格式的视频文件上传，文件大小不能超过': 'The size of the uploading video can not exceed'
 '。MP4文件的视频编码格式，请使用AVC(H264)编码，否则浏览器无法播放。': 'MP4 video should be transcoded using AVC(H264) encoder ,or the video will not be playable by the browser'
-'。如需使用%Edusoho%云视频,点击': '，to use %Edusoho% cloud-video feature ,click on the'
-'了解详情,%Edusoho%云视频将为您提供稳定、安全、经济、便捷的视频托管服务以及优质的视频播放体验。': 'Learn more,% Edusoho% Cloud video will provide you with a stable, secure, economical and convenient video hosting service as well as high-quality video playback experience.'
+'。如需使用%Edusoho%云视频,点击': '，to use %Edusoho% Cloud Video feature ,click on the'
+'了解详情,%Edusoho%云视频将为您提供稳定、安全、经济、便捷的视频托管服务以及优质的视频播放体验。': 'Learn more, %Edusoho% Cloud video will provide you with a stable, secure, economical and convenient video hosting service as well as high-quality video playback experience.'
 '暂无视频文件，请先上传。': 'No video file, please upload.'
 '支持优酷、土豆、腾讯、网易公开课的视频页面地址导入': 'Open online course from Youku, Tudou, Tencent, Netease is now suported'
 '正在导入，请稍等': 'Improting please wait'
@@ -634,7 +634,7 @@ flash课程: 'Courses in flash video format'
 会员课程设置: 'Premium Course Settings'
 '设置会员课程后，该会员及更高等级会员，可免费学习。': 'After setting the course membership ,members on this level or higher can learn the course for free'
 开启视频试看: 'Activate video preview  feature'
-'视频试看功能仅云视频支持': 'Previewing feature is only suported for cloud-video'
+'视频试看功能仅云视频支持': 'Previewing feature is only suported for Cloud Video'
 试看时长: 'Previewing Time'
 分钟: Mins
 '抱歉，您无权设置课程价格，如有需要请联系网站管理员！': 'Sorry, you have no right to set the price of the course, if necessary, please contact the Administrator!'
@@ -886,7 +886,7 @@ flash课程: 'Courses in flash video format'
 个人设置: 'My Account'
 我的教学: 'My Teaching'
 '我的学习': 'My Learning'
-管理后台: Administration
+管理后台: ' Admin Console'
 通知: Notice
 私信: Message
 退出登录: 'Sign Out'
@@ -1737,10 +1737,10 @@ Email地址: 'Email Address'
 '添加文件': ' Add file'
 '开始上传': ' Uploading'
 '资料库支持多种文件格式上传分享下载，单个文件大小上限<strong>2GB</strong>。': 'Repository support a variety of file formats to upload， share， download，single file size should less then <strong>2GB</strong>。'
-'视频将上传到<strong>云视频服务器</strong>，并转换为云视频为创建ES视频课时备用，如需修改云视频转码类型，请先设置转码类型后再进行上传视频。转换过程需要等待，转换过程中视频将无法播放。': 'video will be uploaded to <strong> cloud-video server </strong>，and converted to cloud-video which prepare for creating ES video courses.If you need to modify the type of transcode of cloud-video ，please set the type of transcode first。You need waiting when transcoding, and the video cannot be played when transcoding。'
+'视频将上传到<strong>云视频服务器</strong>，并转换为云视频为创建ES视频课时备用，如需修改云视频转码类型，请先设置转码类型后再进行上传视频。转换过程需要等待，转换过程中视频将无法播放。': 'video will be uploaded to <strong> Cloud Video server </strong>，and converted to Cloud Video which prepare for creating ES video courses.If you need to modify the type of transcode of Cloud Video ，please set the type of transcode first。You need waiting when transcoding, and the video cannot be played when transcoding。'
 '支持<strong>断点续传</strong>（仅支持HTML5浏览器）。': 'support <strong> breakpoint resume</strong>（only support HTML5 explore）。'
 '支持<strong>mp4, mp3</strong>格式的文件上传，且文件大小不能超过<strong>2.0GB</strong>。<br>MP4文件的视频编码格式，请使用AVC(H264)编码，否则浏览器无法播放。': 'support upload filetype of <strong>mp4, mp3</strong>，the file size should less than <strong>2.0GB</strong>。<br>please use the code of AVC(H264) when the filetype is MP4，or the explore cannot play。'
-'视频将上传到<strong>网站服务器</strong>，如需使用云视频,点击<a href="http://open.edusoho.com/show/cloud/video" target="_blank">这里</a>了解详情。': 'videos will be uploaded to<strong> web server</strong>，if you need cloud-video, click <a href="http://open.edusoho.com/show/cloud/video" target="_blank"> here </a> know more information。'
+'视频将上传到<strong>网站服务器</strong>，如需使用云视频,点击<a href="http://open.edusoho.com/show/cloud/video" target="_blank">这里</a>了解详情。': 'videos will be uploaded to<strong> web server</strong>，if you need Cloud Video, click <a href="http://open.edusoho.com/show/cloud/video" target="_blank"> here </a> know more information。'
 '暂无介绍': 'no introduction yet'
 还没有签名: 'no label yet'
 在学: Learning
@@ -1855,7 +1855,7 @@ Email地址: 'Email Address'
 '六': ' Sat'
 日: ' Sun'
 本地视频: 'local video'
-云视频: cloud-video
+云视频: Cloud Video
 网络视频: 'internet video'
 管理员: administrator
 '超级管理员': 'super administrator'
@@ -1883,7 +1883,7 @@ Email地址: 'Email Address'
 购买班级数: 'buy classes'
 '完成课时学习数': 'classes complete'
 视频观看数: 'video played'
-'└─ 云视频观看数': '└─ cloud-video played'
+'└─ 云视频观看数': '└─ Cloud Video played'
 '└─ 本地视频观看数': '└─ local video played'
 '└─ 网络视频观看数': '└─ internet video played'
 营收额: revenue
