添加trans函数和修复bug

--- a/src/Topxia/WebBundle/Resources/translations/messages.en_US.yml
+++ b/src/Topxia/WebBundle/Resources/translations/messages.en_US.yml
@@ -47,7 +47,7 @@
 '暂无热门资讯': 'No hot article'
 推荐资讯: 'Recommended article'
 '暂无推荐资讯': 'No recommended article'
-月: /
+月: month
 热门评论: 'Hot comments'
 评论于: 'Commented at'
 一个评论都没有！: 'No comment'
