--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,21 @@
 CHANGELOG
 =========
+7.1.0（2016-08-18）
+云附件
+• 支持在小组讨论中上传云附件
+• 支持在课程试题中上传云附件
+• 支持在课程/班级讨论区上传云附件
+• 支持在资讯中添加云附件
+• 支持在试卷、作业、联系中上传云附件
+• 支持云附件的预览
+• 支持云附件下载
+• 支持云附件管理
+新增：连连支付网银支付方式
+新增：连连支付快捷支付方式
+修复：特定情况下云短信无法发送短连接的问题
+修复：视频课时中部分腾讯视频无法导入的问题
+修复：小组背景图上传裁剪问题
+
 7.0.2（2016-08-11）
 优化：试题收藏功能课程有效期显示
 优化：班级旁听生购买逻辑
