--- a/src/Topxia/AdminBundle/Resources/translations/messages.en_US.yml
+++ b/src/Topxia/AdminBundle/Resources/translations/messages.en_US.yml
@@ -1161,23 +1161,23 @@ PHP扩展：: 'PHP extention：'
 正常扫描文件......: 'Scanning documents......'
 '系统空间占用': 'System disk space'
 '总共': 'In total'
-网站名称: 'Website name'
-'网站副标题': 'Website subtitle'
-网站域名: 'Website domain'
+网站名称: 'Website Name'
+'网站副标题': 'Website Subtitle'
+网站域名: 'Domain Name'
 '以"http://"开头': 'Start with "http://"'
-网站LOGO: 'Website LOGO'
+网站LOGO: 'Website Logo'
 '请上传png, gif, jpg格式的图片文件。LOGO图片建议不要超过250*50。': 'Please upload images in the format of PNG,GIF,JPG .Recommended LOGO images size should not be larger than 250*50'
-'浏览器图标': 'Internet explorer icon'
+'浏览器图标': 'Web Browser Icon'
 '请上传ico格式的图标文件, 建议大小16*16或者32*32。': 'Please upload images in the format of ICO.Recommended image size is 16*16 of 32*32'
 'SEO关键词': 'SEO Keywords'
 '设置多个关键词请用半角逗号","隔开。': 'Please use "," to separate multiple Keywords'
-SEO描述信息: 'SEO Description information'
-管理员邮箱地址: 'Administrator email address'
-'课程内容版权方': 'Course content copyright owner'
+SEO描述信息: 'SEO Description'
+管理员邮箱地址: 'Admin Email Address'
+'课程内容版权方': 'Course Copyright Owner'
 '您可以填写网站名称或公司名称。': 'You can enter website name and company name.'
 ICP备案号: ICP
 '网站统计分析代码部署': 'Website statistics analysis code deployment'
-'统计分析代码': 'Statistics analysis code'
+'统计分析代码': 'Statistics Analysis Code'
 建议使用下列统计分析的一种：: 'Please choose one of the recommended statistical analysis provider listed below.'
 谷歌分析: 'Google analysis'
 百度统计: 'Baidu analysis'
@@ -1371,30 +1371,30 @@ EduSoho主题编辑: 'EduSoho Theme edit'
 现金账单: 'Cash transaction management'
 虚拟币账单: 'Coin transaction management'
 课程退款管理: 'Course refund management'
-站点设置: 'Site settings'
+站点设置: 'Site Settings'
 邮件服务器设置: 'Email server settings'
-顶部导航: 'Top navigation'
-底部导航: 'Bottom navigation'
-客服: 'Customer service'
+顶部导航: 'Top Navigation'
+底部导航: 'Bottom Navigation'
+客服: 'Customer Service'
 '侧边栏': Sidebar
-用户设置: 'User settings'
-用户信息设置: 'User information settings'
-默认头像: 'Default avatar'
-默认图片: 'Default image'
-运营设置: 'Operation settings'
-账务设置: 'Accounting settings'
-使用方式: Useage
+用户设置: 'User Settings'
+用户信息设置: 'User Profile'
+默认头像: 'Default Avatar'
+默认图片: 'Default Image'
+运营设置: 'Operation Settings'
+账务设置: 'Finance Settings'
+使用方式: Usage
 退款: Refund
 移动端设置: 'Mobile App settings'
-系统优化: 'System optimization'
-定时任务: 'Cycled Tasks'
-IP黑名单: 'IP blacklist'
+系统优化: 'System Optimization'
+定时任务: 'Scheduled Tasks'
+IP黑名单: 'IP Blacklist'
 发帖限制设置: 'Post limitation settings'
-系统自检: 'System self checking'
-系统日志: 'System log'
-云视频设置: 'Cloud video settings'
-云短信设置: 'Cloud message settings'
-云搜索设置: 'Cloud search settings'
+系统自检: 'System Self-checking'
+系统日志: 'System Log'
+云视频设置: 'Cloud Video Settings'
+云短信设置: 'Cloud SMS Settings'
+云搜索设置: 'Cloud Search Settings'
 ES应用: 'EduSoho APP'
 应用中心: 'APP Center'
 已购项目: 'My APP'
