--- a/src/SensitiveWord/SensitiveWordBundle/Resources/translations/messages.en_US.yml
+++ b/src/SensitiveWord/SensitiveWordBundle/Resources/translations/messages.en_US.yml
@@ -1,15 +1,15 @@
 '搜索关键字': 'Search by keywords'
 命中敏感词: Sensitive Words Hit
 屏蔽文本: Mask Text
-屏蔽时间: Masked at
+屏蔽时间: Hit At
 IP地址: IP Address
 '暂无屏蔽记录!': 'No record'
-屏蔽次数: Masked Times
-'添加时间': 'Added at'
+屏蔽次数: Hit Times
+'添加时间': 'Added At'
 '暂无敏感词信息!': 'No sensitive word'
-'添加敏感词': 'Add sensitive word'
+'添加敏感词': 'Add Sensitive Word'
 '换行可一次添加多个敏感词': 'Add multiple sensitive words in multiple lines'
-敏感词类型: Sensitive word type
+敏感词类型: Type
 '选择禁用，将无法保存。': 'If choose block, data will not be able to save.'
 '选择屏蔽，会将指定敏感词替换为"*"。': 'If choose mask, the sensitive words will be replaced with "*"'
 更改为屏蔽: Change to Mask
