--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,7 +6,7 @@ CHANGELOG
 • 支持在课程试题中上传云附件
 • 支持在课程/班级讨论区上传云附件
 • 支持在资讯中添加云附件
-• 支持在试卷、作业、联系中上传云附件
+• 支持在试卷、作业、练习中上传云附件
 • 支持云附件的预览
 • 支持云附件下载
 • 支持云附件管理
