--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,12 @@
 CHANGELOG
 =========
+7.1.2 (2016-08-25)
+新增：直播课程录播管理上传录像文件的功能
+新增：云搜索支持公开课
+优化：云搜索下课程类型的区分
+优化：删除课程时验证文案
+优化：阔知学堂下载页面
+
 7.1.1（2016-08-19）
 修复：个别用户无法显示云附件上传按钮的问题
 
