--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 CHANGELOG
 =========
+7.1.3（2016-08-26）
+优化：免费加入课程的支付方式文案优化
+优化：直播公开课教师权限问题
+
 7.1.2 (2016-08-25)
 新增：直播课程录播管理上传录像文件的功能
 新增：云搜索支持公开课
