--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,13 @@
 CHANGELOG
 =========
+7.1.4（2016-09-01）
+新增：试卷课时新增次数限制功能
+优化：系统内一系列文案优化
+优化：管理员云附件管理权限
+优化：统一讨论区用户名样式
+优化：课程/班级评论样式
+优化：课程无法购买的按钮样式
+
 7.1.3（2016-08-29）
 优化：免费加入课程的支付方式文案优化
 优化：直播公开课教师权限问题
