--- a/src/Topxia/WebBundle/Resources/translations/messages.zh_CN.yml
+++ b/src/Topxia/WebBundle/Resources/translations/messages.zh_CN.yml
@@ -3202,21 +3202,43 @@ Firefox浏览器: Firefox浏览器
 '签到,第': '签到,第'
 个签到.: 个签到.
 已签: 已签
-班级说明: 班级说明
-'编号及排序无法修改；': '编号及排序无法修改；'
-'班级地址规则：域名/classroom/班级编号；': '班级地址规则：域名/classroom/班级编号；'
-课程说明: 课程说明
-'课程地址规则：域名/course/课程编号；': '课程地址规则：域名/course/课程编号；'
 更新Coin虚拟币设置: 更新Coin虚拟币设置
 '创建编辑区模板成功!': '创建编辑区模板成功!'
 '更新编辑区模板成功!': '更新编辑区模板成功!'
 '确认要删除此编辑区模板吗？': '确认要删除此编辑区模板吗？'
 '删除编辑区模板成功!': '删除编辑区模板成功!'
 请输入标签: 请输入标签
-'您尚未开通云视频服务，无法使用资源管理功能，': '您尚未开通云视频服务，无法使用资源管理功能，'
-立即开通: 立即开通
-了解云视频: 了解云视频
-'“云资源管理”提供完善的资源管理功能，您可以从课程、上传时间、资源类型等多个维度对资源进行管理，帮助您轻松掌控全站的视频、音频、图片、文档等资源，再也不用担心过期资源占用存储空间了。': '“云资源管理”提供完善的资源管理功能，您可以从课程、上传时间、资源类型等多个维度对资源进行管理，帮助您轻松掌控全站的视频、音频、图片、文档等资源，再也不用担心过期资源占用存储空间了。'
 '请上传png, gif, jpg格式的大于等于50*50的': '请上传png, gif, jpg格式的大于等于50*50的'
 等比例: 等比例
 '图片，否则无法上传': '图片，否则无法上传'
+尚未开通云视频提示: >
+  <h4>
+    您尚未开通云视频服务，无法使用资源管理功能，
+    <a href="%settingCloudVideoUrl%">立即开通</a>
+    或
+    <a href="%showCloudVideoUrl%" target="_blank">了解云视频</a>
+  </h4>
+  <p>
+  “云资源管理”提供完善的资源管理功能，您可以从课程、上传时间、资源类型等多个维度对资源进行管理，帮助您轻松掌控全站的视频、音频、图片、文档等资源，再也不用担心过期资源占用存储空间了。
+  </p>
+课程说明Tooltip: >
+  <div style='width:250px;'>
+    <span style='color:blue;'>课程说明</span><br>
+    1. 编号及排序无法修改；<br>
+    2. 课程地址规则：域名/course/课程编号；
+  </div>
+班级说明Tooltip: >
+  <div style='width:250px;'>
+    <span style='color:blue;'>班级说明</span><br>
+    1. 编号及排序无法修改；<br>
+    2. 班级地址规则：域名/classroom/班级编号；
+  </div>
+公开课说明Tooltip: >
+  <div style='width:250px;'>
+    <span style='color:blue;'>公开课说明</span><br>
+    1. 编号及排序无法修改；<br>
+  </div>
+资讯属性Tooltip: >
+  <p>设为<strong>置顶</strong>后，该资讯将会显示在列表的最前面。</p>
+  <p>设为<strong>头条</strong>后，如果设置了缩略图，则该资讯的缩略图将显示在资讯首页的头条图片区，图片尺寸建议统一为：754*424。</p>
+  <p>设为<strong>推荐</strong>后，该资讯将会显示在页面右侧的推荐资讯中。</p> 
