--- a/src/Topxia/WebBundle/Resources/translations/messages.en_US.yml
+++ b/src/Topxia/WebBundle/Resources/translations/messages.en_US.yml
@@ -1200,7 +1200,7 @@ Email地址: 'Email Address'
 '学习中': learning
 '暂无学习中的课程': 'no learning course'
 '没有等待开始的直播课': 'no live courses waiting to start'
-'共 %noteNum% 篇笔记': '…notes in total'
+'共 %noteNum% 篇笔记': '%noteNum% notes in total'
 最后更新%noteLastUpdateTime%: 'last updated notes'
 查看笔记: 'check over the notes'
 '你还没有写过笔记': 'you have not write a note'
@@ -1271,8 +1271,8 @@ Email地址: 'Email Address'
 管理%classroom.name%: 'Manage %classroom.name%'
 '共%coursesCount%课': 'total courses%coursesCount%'
 今日新增: 'New today'
-学员%allCount%: students…%allCount%
-话题%threadCount%: topic…
+学员%allCount%: 'students count: %allCount%'
+话题%threadCount%: 'topic count: %threadCount%'
 '课时完成学习%todayFinishedLessonNum%': 'finished %todayFinishedLessonNum%'
 找不到所教%classroom.name%！: 'can not find teached %classroom.name%'
 普通课程: 'normal courses'
@@ -1284,9 +1284,9 @@ Email地址: 'Email Address'
 已移除: Removed
 文件管理: 'File Management'
 '暂无在教的课程': 'No teaching course.'
-您的课程中还没有: 'there''s no…in your course'
-提问过...: 'have questioned…'
-话题...: discuss…
+# 您的课程中还没有: 'there''s no…in your course'
+# 提问过...: 'have questioned…'
+# 话题...: discuss…
 '你还没有发表过话题': 'no issued topic'
 '暂无提问的记录': 'no question record'
 课程话题: 'course topic'
@@ -1313,7 +1313,7 @@ Email地址: 'Email Address'
 '（1元 = %cashRate%%coin_name%）': '1 yuan= %cashRate%%coin_name%'
 本次使用: 'this time use'
 账户余额：: 'account balance'
-'为了保障账户资金安全，请先': 'to ensure the security of your account assets, please…'
+# '为了保障账户资金安全，请先': 'to ensure the security of your account assets, please…'
 '设置支付密码': 'set payment password'
 '设置登录密码': 'set sign in password'
 '请输入支付密码': 'please type in payment password'
@@ -1359,14 +1359,14 @@ Email地址: 'Email Address'
 '您的密码重设要求已经得到验证。请点击以下链接输入您新的密码：': 'your require for resetting password has been authenticated, please click the link below and enter your new password'
 '如果您的email程序不支持链接点击，请将上面的地址拷贝至您的浏览器(例如IE)的地址栏进入': 'if your email program do not support clicking, please copy the link to web broswer address field and enter'
 这是一封自动产生的email，请勿回复。: 'this email is automatically sent, please do not reply'
-请到: 'please go to …to check the email, and reset your password from the email'
+# 请到: 'please go to …to check the email, and reset your password from the email'
 '查阅来自%site.name%的邮件, 从邮件重设你的密码。': 'Please check email from %site.name% and reset your password by following the instructions in the email.'
 登录邮箱查收邮件: 'log into email and receive letters'
 '重设密码成功': 'reset password successed'
 '新密码设置成功，请重新登录。': 'set new password successed and re-login'
 '请再输入一次密码': 're-enter your ypassword'
 支付中心: 'payment center'
-'订单支付成功，将在 <span class="js-countdown">3</span> 秒后跳转</p>': 'order payment successed, jump within …seconds'
+# '订单支付成功，将在 <span class="js-countdown">3</span> 秒后跳转</p>': 'order payment successed, jump within …seconds'
 '由于网校使用的为“担保交易”，因此需要您去支付宝网站对本次购买做“确认收货”操作（系统已自动完成虚拟发货），确认后即支付成功，即可进入课程学习。': 'as network school use "secured transaction",you need to "CINFIRM RECEIPT" at Alipay website(system has virtually delivered the goods), after confirmation the payment will be successed, and you can start learning the courses'
 '由于您在支付时选择的交易方式是“担保交易”，因此需要您去支付宝网站对本次购买做“确认收货”操作（系统已自动完成虚拟发货），确认后即支付成功，即可进入课程学习。': 'as you used "secured transaction" for payment,you need to "CINFIRM RECEIPT" at Alipay website(system has virtually delivered the goods), after confirmation the payment will be successed, and you can starting learning the courses'
 '核实银行预留手机': 'confirm the bank reserved mobile phone'
@@ -1435,7 +1435,7 @@ Email地址: 'Email Address'
 '标记': mark
 '取消标记': unmark
 题目预览: preview
-下次再做: 'do...next time'
+下次再做: 'do next time'
 时间不限: 'time unlimited'
 我要交卷: submit
 答题人：: answerer
@@ -1458,7 +1458,7 @@ Email地址: 'Email Address'
 总分%score%分: 'total score:'
 道: Questions
 答错: Wrong
-'（其中有%accuracy[type].partRight%道漏选）': ...miss-selection
+'（其中有%partRightNum%道漏选）': '(incomplete question(s): %partRightNum%)'
 未答: 'not answered'
 '批阅完成': 'mark complished'
 '批阅中': marking
@@ -1473,9 +1473,9 @@ Email地址: 'Email Address'
 '请完成以下题目的批阅：': 'please remark the following questions'
 试卷预览中: 'paper previewing'
 答题中: answering
-'共 %paper.itemCount% 题，总分 %paper.score% 分': 'total…questions ,total...points'
+'共 %paper.itemCount% 题，总分 %paper.score% 分': 'total %paper.itemCount% questions ,total %paper.score% points'
 '及格为 %paper.passedScore% 分': 'passing score is %paper.passedScore% points'
-'请在 %paper.limitedTime% 分钟内作答': 'please answer in …minutes'
+'请在 %paper.limitedTime% 分钟内作答': 'please answer in %paper.limitedTime% minutes'
 '请输入验证码': 'please enter verification code'
 '验证码': 'verification code'
 '看不清，点击换一张': 'not clear？Click to change'
@@ -1540,10 +1540,10 @@ Email地址: 'Email Address'
 '共找到<span>%count%</span>门<span>“%keywords%”</span>相关课程': 'Found <span>%count%</span> courses matching keyword <span>“%keywords%”</span>.'
 '共找到<span>%count%</span>门课程': 'Found <span>%count%</span> courses.'
 '没有搜到相关课程，请换个关键词试试！': 'cannot find related courses, please change your keyword'
-为您找到资讯结果约: 'about…results found for you'
+# 为您找到资讯结果约: 'about…results found for you'
 个: results
 正在学: 'now learning'
-'%course.ratingNum%人评价%course.studentNum%人学习': '…comment on,…study…'
+# '%course.ratingNum%人评价%course.studentNum%人学习': '…comment on,…study…'
 '课时 %lesson.number%: %lesson.title%': 'lesson %lesson.number%'
 为您找到课程结果约: 'courses found for you are'
 推荐教师: 'recommended teacher'
@@ -3205,7 +3205,7 @@ Firefox浏览器: Firefox
 '公共资料': 'public material'
 我的收藏: 'my collection'
 '输入视频标题关键字': 'enter the keywords of the video title'
-'正在加载，请稍等': 'loading... please wait for a moment'
+'正在加载，请稍等': 'loading...'
 '当前正在上传文件，离开此页面，将自动取消上传。您真的要离开吗？': 'File uploading will be cancelled if leaving the page. Are you determined to leave?'
 视频文件: 'video file'
 '请输入视频页面地址': 'Please enter the video address'
